# drawio2pptx

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/drawio2pptx/: SKILL.md
.github/workflows/: ci.yml
examples/: .$sample.drawio.dtmp  sample.drawio
src/drawio2pptx/: __init__.py  build.py  cli.py  model.py  stencils.py  svgmap.py  verify.py
tests/: test_convert.py  test_units.py
tools/: make_preview.py
