[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio2pptx"
version = "0.1.0"
description = "Convert draw.io diagrams into individually editable PowerPoint objects, not a flat image"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["drawio", "diagrams.net", "powerpoint", "pptx", "diagram", "converter"]
authors = [{ name = "mz01-lsjin" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Topic :: Office/Business :: Office Suites",
]
dependencies = [
  "python-pptx>=0.6.21",
  "pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/mz01-lsjin/drawio2pptx"
Issues = "https://github.com/mz01-lsjin/drawio2pptx/issues"

[project.scripts]
drawio2pptx = "drawio2pptx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drawio2pptx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
