[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drawio2pptx"
version = "0.1.0"
description = "Convert draw.io diagrams into individually editable PowerPoint objects, not a flat image"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["drawio", "diagrams.net", "powerpoint", "pptx", "diagram", "converter"]
dependencies = [
  "python-pptx>=0.6.21",
  "pillow>=9.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>X=0.5"]

[project.scripts]
drawio2pptx = "drawio2pptx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/drawio2pptx"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
